3day/ingress/service.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: nginx-lb
spec: 
  type: LoadBalancer
  selector: 
    app: nginx
  ports: 
  - port: 80 
    targetPort: 80 

---
apiVersion: v1 
kind: Service 
metadata: 
  name: goapp-lb 
spec: 
  type: LoadBalancer
  selector: 
    app: goapp
  ports: 
  - port: 80 
    targetPort: 8080
