3day/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata:
  name: nginx-goapp-ingress 
spec: 
  rules: 
  - host: nginx.acorn.com
    http: 
      paths: 
      - path: / 
        pathType: Prefix
        backend: 
          service: 
            name: nginx-lb 
            port: 
              number: 80 
  - host: goapp.acorn.com 
    http: 
      paths: 
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: goapp-lb 
            port: 
              number: 80
